[gd_scene load_steps=2 format=3 uid="uid://bi6petc7rnc76"]

[ext_resource type="Script" path="res://Screens/CityScreens/Buildings/RaceTrack/race_track_vis.gd" id="1_yqbpr"]

[node name="RaceTrackVis" type="Node2D"]
script = ExtResource("1_yqbpr")

[node name="VoronoiPolygons" type="Node2D" parent="."]

[node name="BridsonPoints" type="Node2D" parent="."]

[node name="PathLines" type="Node2D" parent="."]
